--- a/src/pages/[userId]/[articleId]/index.module.css
+++ b/src/pages/[userId]/[articleId]/index.module.css
@@ -8,6 +8,17 @@
 .userContainer {
   margin-top: 32px;
   display: flex;
+  align-items: center;
+}
+
+.userText {
+  margin-left: 12px;
+}
+
+.userIcon {
+  width: 48px;
+  height: 48px;
+  border-radius: 24px;
 }
 
 .userId {
