--- a/src/pages/[userId]/[articleId]/index.module.css
+++ b/src/pages/[userId]/[articleId]/index.module.css
@@ -25,6 +25,10 @@
   font-size: 16px;
 }
 
+.publishedAt {
+  font-size: 16px;
+}
+
 .userName {
   font-size: 16px;
   opacity: 0.5;
@@ -32,4 +36,9 @@
 
 .content {
   margin-top: 32px;
+}
+
+.newContent {
+  margin-left: 8px;
+  color: #22c;
 }
